
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 AUG 01a
  * in model/fluid/_*_plasma/fluid.hh and model/fluid/_drift-diffusion/fluid.hh
    - added INCLUDE_E_EFFECTS_ON_MOBILITY to gl_model_fluid_t
  * in model/fluid/_*_plasma/fluid.c and model/fluid/_drift-diffusion/fluid.c
    - in write_model_fluid_template(), added INCLUDE_E_EFFECTS_ON_MOBILITY
    - in read_model_fluid_actions(), added find_bool_var_from_codex() to read 
      INCLUDE_E_EFFECTS_ON_MOBILITY
    - in _mu(), added call to adjust_muk_for_Ek_effect()
    - in find_prim_fluid_mem(), added call to adjust_muk_for_Ek_effect()
  * in model/share/transport_share.c
    - in adjust_muk_for_Ek_effect(), removed code for O-
  * in model/transport/doc/report.tex
    - fixed a typo in the table for the mobilities: N_n should be N when finding
      the effect of the electric field on the ion mobility


2022 JUL 29a
  * in model/chem/_C2H4_Air_23s/doc/report.tex
    - updated the footnotes
  * in model/transport/doc/report.tex
    - added the NRL Coulomb logarithm to determine the Parent-Macheret electron mobility
  * in model/share/transport_share.c
    - changed LNLAMBDA from LNLAMBDA_RAIZER to LNLAMBDA_NRL (matches experimental data better
      for both air and hydrogen plasmas)


2022 JUL 27a
  * in model/chem
    - added _C2H4_Air_23s
  * in model/transport/doc/report.tex
    - fixed a mistake in the table outlining the ion mobilities
  * in src/control.c
    - added Zettervall bib
  * in src/main.c
    - in write_options(), added "(EXPERIMENTAL)" to the mpi input and output (-im, -im1, -om etc) 
      flags
  * in tools/chemkin2cfdwarp.c
    - fixed a bug related to the UNIX vs Windows end of line characters. Now, the code should