@@ -220,7 +220,8 @@ Bdry(
     BDRY_FREESTREAM1                   5    Freestream, 1o, params Vx,Vy, P, T
     _________________________________________________________________________________________
     }
-    All(BDRY_WALLTFIXED1,Twall,0.1e0);
+    gammae=0.2;
+    All(BDRY_WALLTFIXED1,Twall,gammae);
     Faces(BDRY_OUTFLOWSUPERSONIC1,BDRY_OUTFLOWSUPERSONIC1,  BDRY_WALLTFIXED1,BDRY_INFLOWSUPERSONIC);
     {Region(is,js,  im1,js,  BDRY_SLIPWALL1);
     Region(im4,js,  ie,js,  BDRY_SLIPWALL1);}
@@ -263,6 +264,7 @@ Model(
     N2VIBMODEL=N2VIBMODEL_MACHERET;
     N2VIBJOULEHEATING=YES;
     TETRANSPORT_WEEE_TWOTEMPERATURE=FALSE;
+    INCLUDE_E_EFFECTS_ON_MOBILITY=YES;
     REACTING=YES;
     emfieldworkheatfact=1.0;   {factor multiplying the emfield work and heat source terms}
     sigmadiv=1e-9; {S/m}
@@ -270,7 +272,7 @@ Model(
     Pmin=1.0e-2;    Pmax=9.9e99;   {Pa}
     Tmin=1.0e2;     Tmax=20.0e3;    {K}
     Tvmin=Tmin;     Tvmax=30.0e3;  {K}
-    Temin=Temin;    Temax=60000.0;  {K}
+    Temin=Temin;    Temax=100000.0;  {K}
     Twmin=Tmin;     Twmax=Tmax;    {K}
     wmin=1.0e-50;                  {min mass fraction allowed in the domain for neutrals}
     chiimin=1e-30;    chiimax=1.0;    {min and max ion mass fraction}
@@ -435,8 +437,8 @@ Cycle(
 
     Init(
      Epotential(
-      Region(im2,js,im3,js, INITEMF_TYPE1,200);
-      Region(im3+3,js,im4,js, INITEMF_TYPE1,0);
+      Region(im2,js,im3,js, INITEMF_TYPE1,0);
+      Region(im3+3,js,im4,js, INITEMF_TYPE1,-1800); {first -600 then -900}
      );
     );
 
@@ -451,8 +453,8 @@ Cycle(
     );
       Model(
         NavierStokesPlasma(
-          chiemin=1e-11; 
-          chiimin=1e-10;
+          chiemin=1e-12; 
+          chiimin=1e-11;
         );
       );
     CFLmax=0.3;
@@ -471,40 +473,6 @@ Cycle(
 
 
 Post(
-  xstation[1]=0.1; {m}
-  xstation[2]=0.2; {m}
-  xstation[3]=0.3; {m}
-  numsteps=300;
-  qmin=1.0; {m/s, as small a value as possible}
-  Pback_min=400; {Pa}
-  Pback_max=40000; {Pa}
-  Aback=1.0; {m2/m}
-  for (cnt,1,3,
-    XSTATION_Set(xstation[cnt]);
-    Pback=XSTATION_Pback(Aback, Pback_min, Pback_max, numsteps, qmin);
-    Fpot=XSTATION_Fpot(Pback, numsteps, qmin);
-    mdot=XSTATION_mdot();
-    Tstag=XSTATION_Tstag();
-    Pstag=XSTATION_Pstag(numsteps);
-    Pstar=XSTATION_Pstar();
-    T=XSTATION_T();
-    q=XSTATION_q();
-    rho=XSTATION_rho();
-    htstar=XSTATION_htstar();
-    fprintf(postfilename,"x      = %E m\n"
-           "Pback  = %E Pa\n"
-           "Fpot   = %E Ns/kg\n"
-           "mdot   = %E kg/ms\n"
-           "htstar = %E J/kg\n"
-           "Tstag  = %E K\n"
-           "Pstag  = %E Pa\n"
-           "Pstar  = %E Pa\n"
-           "T      = %E K\n"
-           "q      = %E m/s\n"
-           "rho    = %E kg/m3\n\n"
-           ,xstation[cnt],Pback,Fpot,mdot,htstar,Tstag,Pstag,Pstar,T,q,rho);
-  );
-  fprintf(postfilename,"\n");
   for (dim,1,2,
     Area[dim]=_Area(is,js, ie,je, dim,BDRY_WALLTFIXED1);
     Fshear[dim]=_Fshear(is,js, ie,je, dim,BDRY_WALLTFIXED1);
